# perlin_noise_1D-Rust

./: Cargo.toml  README.md
src/: main.rs
