[package]
name = "perlin_noise_1d_rust"
version = "0.1.0"
edition = "2021"
authors = ["homenique <Homenique.t@gmai,com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Para
chrono ="0.4.19"
names ="0.14.0"
nannou ="0.18.1"
rand ="0.8.5"